Fixed issue with content at a higher z-index than the rulers

--- a/style.css
+++ b/style.css
@@ -43,12 +43,9 @@ body {
 	display: flex;
 }
 
-.top {
-	z-index: 1;
-}
-
 .top, .left, .bottom, .right {
 	position: sticky;
+	z-index: 1;
 }
 
 .mid {
